--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,265 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.img{
+  width: 20px;
+}
+
+.div{
+  margin-top: 15px;
+  vertical-align: middle;
+  margin-left: auto;
+}
+
+.a1{
+  margin-left: 15px;
+}
+
+a{
+  text-decoration: none;
+  color: Black;
+  font-size: 12px
+}
+
+.logo{
+  width: 20em;
+}
+
+* {
+  margin: 0;
+  font-family: sans-serif;
+}
+
+#gmail{
+  position: absolute;
+  display: inline-block;
+  font-size: 15px;
+  margin-top: 2%;
+  margin-left: 73%;
+}
+
+#googleimage {
+    display: inline-block;
+    position: absolute;
+    margin-left: 78%;
+    margin-top: 2%;
+    font-size: 15px;
+}
+
+#gmail a {
+  position: absolute;
+  text-decoration: none;
+  color: black;
+}
+
+#gmail a:hover {
+  text-decoration: underline; color: black;
+}
+
+#googleimage a {
+  position: absolute;
+  text-decoration: none;
+  color: black;
+}
+
+#googleimage a:hover {
+  text-decoration: underline; color: black;
+}
+
+#categorie {
+  width: 35px;
+  margin-left: 83%;
+  margin-top: 1%;
+}
+
+#categorie  img{
+  width: 35px;
+  margin-top: 1%;
+}
+
+.boutonc {
+  margin-top: 0.5%;
+  margin-left: 1%;
+  position: absolute;
+  background-color: #4583ec ;
+  border-radius: 0px;
+  position: absolute;
+  line-height: 25px;
+  padding-left:20px;
+  color: white;
+  font-size: 15px;
+  padding-right: 20px;
+  padding-top:10px;
+  padding-bottom: 10px;
+}
+
+.googleimg {
+  position: absolute;
+  margin-left: 38%;
+  margin-top: 11%;
+
+}
+
+.googleimg img {
+  width:300px;
+  height:100px;
+}
+
+.champ {
+  margin-left: 24%;
+  position: absolute;
+  width: 40%;
+  box-shadow: 2px 2px 2px #e4e4e4;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #eaeaea;
+  padding: 10px 10px 10px 10px;
+}
+
+.champ:hover {
+  margin-top: 20%;
+  margin-left: 28%;
+  position: absolute;
+  width: 40%;
+  box-shadow: 10px 5px 5px #e4e4e4;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #eaeaea;
+  padding: 10px 10px 10px 10px;
+}
+
+input.champ:focus {
+  margin-top: 20%;
+  margin-left: 28%;
+  position: absolute;
+  width: 40%;
+  box-shadow: 10px 5px 5px #e4e4e4;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #eaeaea;
+  padding: 10px 10px 10px 10px;
+}
+
+.Bouton {
+  background-color: #f2f2f2 ;
+  height: 7%;
+  width: 12%;
+  border-radius: 0px;
+  text-align:center;
+  margin-top: 5%;
+  margin-left: 31%;
+  position: absolute;
+  line-height: 25px;
+  padding: 2px;
+  font-size: 12px;
+  border: 0px #e4e4e4 solid;
+}
+
+.Bouton a {
+  text-decoration: none;
+  color : #757575;
+  font-size: 13px;
+}
+
+.Bouton:hover{
+   color: black;
+   border: 1px #e4e4e4 solid;
+}
+
+.Bouton2 {
+  background-color: #f2f2f2 ;
+  height: 7%;
+  width: 12%;
+  border-radius: 0px;
+  text-align:center;
+  margin-top: 5%;
+  margin-left: 45%;
+  position: absolute;
+  line-height: 25px;
+  padding:2px;
+  font-size:12px;
+  border: 0px #e4e4e4 solid;
+}
+
+.Bouton2 a {
+  text-decoration: none;
+  color : #757575;
+  font-size: 13px;
+}
+
+.Bouton2:hover{
+  color: black;
+  border: 1px #e4e4e4 solid;
+}
+
+.language {
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 42px;
+  line-height: 22px;
+  position: relative;
+  font-size: 15px;
+  color: grey;
+  border-top: 1px #e4e4e4 solid;
+}
+
+.language p {
+  padding-top: 1%;
+  padding-left: 2%;
+}
+
+.bas {
+  border-top: 1px #e4e4e4 solid;
+  padding-top: 1%;
+  font-size: 12px;
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 30px;
+  line-height: 20px;
+}
+
+.bas a {
+  text-decoration: none;
+  color: grey;
+}
+
+.bas a:hover {
+  text-decoration: underline; color: grey;
+}
+
+#Publicité {
+  padding-left: 2%;
+}
+
+#Entreprise {
+  padding-left: 2%;
+
+}
+
+#Propos {
+  padding-left: 2%;
+}
+
+#Consommateurs {
+  padding-left: 45%;
+}
+
+#Confidentialité {
+  padding-left: 2%;
+}
+
+#Conditions {
+  padding-left: 2%;
+}
+
+#Paramètres {
+  padding-left: 2%;
+}
+
+footer{
+  margin-top: 17em;
+}
+
 
 
 
